# gradient_cost_plugin

./: CMakeLists.txt  Doxyfile  Eigen_build_problem_fix.txt  README.md  TODO  gradient_cost_layer.xml  package.xml
cfg/: GradientCostPlugin.cfg
config/: config.yaml  grid_map.yaml
include/gradient_cost_costmap_plugin/: gradient_cost_layer.hpp
src/: gradient_cost_layer.cpp
