<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gradient_cost_plugin</name>
  <version>0.0.0</version>
  <description>Costmap layer that calculates a cost based on the gradient of the surfaces</description>
  <author email="ffl@aber.ac.uk">Fred Labrosse</author>
  <maintainer email="ffl@aber.ac.uk">Fred Labrosse</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>message_filters</depend>

  <export>
    <costmap_2d plugin="${prefix}/gradient_cost_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
