<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gradient_cost_plugin</name>
  <version>0.0.0</version>
  <description>Costmap layer that calculates a cost based on the gradient of the surfaces</description>
  <author email="ffl@aber.ac.uk">Fred Labrosse</author>
  <maintainer email="ffl@aber.ac.uk">Fred Labrosse</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>costmap_2d</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_costmap_2d</depend>
  <depend>message_filters</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <costmap_2d plugin="${prefix}/gradient_cost_layer.xml" />
  </export>
</package>